--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
           <li><a href="courses.html">Courses</a></li>
           <!-- <li><a href="trainers.html">Trainers</a></li> -->
           <li><a href="events.html">Events</a></li>
-          <li><a href="pricing.html">Pricing</a></li>
+          <li><a href="backend/Certificate_Maker/index.html">Pricing</a></li>
 
           <li class="dropdown"><a href="#"><span>More</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
